--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -29,3 +29,20 @@ jobs:
         with:
           name: zipped-bundle
           path: ${{ github.sha }}.zip
+  
+  upload:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: zipped-bundle
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-reion: us-east-1
+      - name: Upload to s3
+        run: aws s3 cp ${{ github.sha }}.zip s3://my-bucket-a9a09a9c-bd25-4ee2-a080-1e8c4f3fb97c/${{ github.sha }}.zip
