--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -43,6 +43,6 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-reion: us-east-1
+          aws-region: us-east-1
       - name: Upload to s3
         run: aws s3 cp ${{ github.sha }}.zip s3://my-bucket-a9a09a9c-bd25-4ee2-a080-1e8c4f3fb97c/${{ github.sha }}.zip
