--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -26,6 +26,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: Check out code
         uses: actions/checkout@v2
