README update and adding test job
* Updated README to add AWS account ID to secres
* Added test job scaffolding

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,10 +1,10 @@
 name: Deploy my Lambda Function
 
 on:
-  push: 
-    branches: 
+  push:
+    branches:
       - main
-      
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -40,7 +40,7 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt -t .; fi
       - name: Create zip bundle
-        run: | 
+        run: |
           cd function
           zip -r ../${{ github.sha }}.zip .
       - name: Archive artifact
@@ -48,7 +48,7 @@ jobs:
         with:
           name: zipped-bundle
           path: ${{ github.sha }}.zip
-  
+
   upload:
     runs-on: ubuntu-latest
     needs: build
@@ -65,10 +65,33 @@ jobs:
           aws-region: us-east-1
       - name: Upload to s3
         run: aws s3 cp ${{ github.sha }}.zip s3://${{ secrets.AWS_S3_BUCKET }}/${{ github.sha }}.zip
-      
-  deploy:
+
+  test:
     runs-on: ubuntu-latest
     needs: upload
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Create test function
+        run: |
+              aws lambda create-function --function-name test-function-${{ matrix.input }} \
+              --code S3Bucket=<YOUR BUCKET NAME HERE>,S3Key=${{ github.repository }}/${{ github.sha }}.zip \
+              --handler lambda_function.lambda_handler --runtime python3.8 \
+              --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role
+      - name: Wait 30 seconds
+        run: sleep 30
+      - name: Destroy test function
+        if: ${{ always() }}
+        run: aws lambda delete-function --function-name test-function
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -83,4 +106,3 @@ jobs:
           --s3-bucket ${{ secrets.AWS_S3_BUCKET }} \
           --s3-key ${{ github.sha }}.zip \
           --publish
-
