--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -78,8 +78,8 @@ jobs:
           aws-region: us-east-1
       - name: Create test function
         run: |
-              aws lambda create-function --function-name test-function-${{ matrix.input }} \
-              --code S3Bucket=<YOUR BUCKET NAME HERE>,S3Key=${{ github.repository }}/${{ github.sha }}.zip \
+              aws lambda create-function --function-name test-function \
+              --code S3Bucket=${{ secrets.AWS_S3_BUCKET }},S3Key=${{ github.sha }}.zip \
               --handler lambda_function.lambda_handler --runtime python3.8 \
               --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role
       - name: Wait 30 seconds
