--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,16 +1,15 @@
 name: Deploy my Lambda Function
 
 # trigger on all push events to main branch
-on: 
+on:
   push:
     branches:
       - main
 
 jobs:
-
   lint:
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Set up Python
@@ -19,14 +18,14 @@ jobs:
           python-version: 3.8
       - name: Install linting libraries
         run: |
-            cd function
-            pip install flake8
+          cd function
+          pip install flake8
       - name: Lint with flake8
         run: |
-            # Select identifies which errors should cause the job to fail
-            flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-            # The exit zero flag will show errors as warnings and not fail the run
-            flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          # Select identifies which errors should cause the job to fail
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # The exit zero flag will show errors as warnings and not fail the run
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
   build:
     runs-on: ubuntu-latest
@@ -40,18 +39,19 @@ jobs:
           python-version: 3.8
       - name: Install libraries
         run: |
-            cd function
-            python -m pip install --upgrade pip
-            if [ -f requirements.txt ]; then pip install -r requirements.txt -t .; fi
+          cd function
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt -t .; fi
       - name: Create zip bundle
         run: |
-            cd function
-            zip -r ../${{ github.sha }}.zip .
+          cd function
+          zip -r ../${{ github.sha }}.zip .
       - name: Archive artifact
         uses: actions/upload-artifact@v2
         with:
           name: zipped-bundle
           path: ${{ github.sha }}.zip
+
   upload:
     runs-on: ubuntu-latest
     needs: build
@@ -69,7 +69,7 @@ jobs:
       - name: Upload to S3
         run: aws s3 cp ${{ github.sha }}.zip s3://<YOUR BUCKET NAME HERE>/${{ github.repository }}/${{ github.sha }}.zip
 
-  nonprod:
+  test:
     runs-on: ubuntu-latest
     needs: upload
     strategy:
@@ -84,10 +84,10 @@ jobs:
           aws-region: us-east-1
       - name: Create test function
         run: |
-              aws lambda create-function --function-name test-function-${{ matrix.input }} \
-              --code S3Bucket=${{ secrets.AWS_S3_BUCKET }},S3Key=${{ github.sha }}.zip \
-              --handler lambda_function.lambda_handler --runtime python3.8 \
-              --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role
+          aws lambda create-function --function-name test-function-${{ matrix.input }} \
+          --code S3Bucket=${{ secrets.AWS_S3_BUCKET }},S3Key=${{ github.sha }}.zip \
+          --handler lambda_function.lambda_handler --runtime python3.8 \
+          --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role
       - name: Invoke test function
         run: |
           aws lambda invoke --function-name test-function-${{ matrix.input }} \
@@ -101,7 +101,6 @@ jobs:
       - name: Destroy test function
         if: ${{ always() }}
         run: aws lambda delete-function --function-name test-function-${{ matrix.input }}
-
 
   deploy:
     runs-on: ubuntu-latest
@@ -120,3 +119,15 @@ jobs:
           --s3-bucket ${{ secrets.AWS_S3_BUCKET }} \
           --s3-key ${{ github.sha }}.zip \
           --publish
+
+  docs:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Deploy docs
+        uses: mhausenblas/mkdocs-deploy-gh-pages@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CONFIG_FILE: mkdocs.yaml
