--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -67,7 +67,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       - name: Upload to S3
-        run: aws s3 cp ${{ github.sha }}.zip s3://${{ secrets.AWS_S3_BUCKET }}/${{ github.repository }}/${{ github.sha }}.zip
+        run: aws s3 cp ${{ github.sha }}.zip s3://${{ secrets.AWS_S3_BUCKET }}/${{ github.sha }}.zip
 
   test:
     runs-on: ubuntu-latest
